# alphaxiv-py

./: CHANGELOG.md  pyproject.toml
docs/: api-inventory.md
specs/: README.md
specs/features/: auth-folders-social-actions.md  authenticated-assistant-usage-context-backlog.md  authenticated-assistant.md  authenticated-expansion-backlog.md  cli-guides-and-agent-integrations.md  events-and-rich-paper-search.md  paper-ai-detection-and-model-links.md  paper-preview-slug-resolution-and-figures.md  paper-reads-and-resources.md  public-people-org-profile-backlog.md  search-discovery-feed.md
src/alphaxiv/: __init__.py  _papers.py  client.py  types.py
src/alphaxiv/cli/: paper.py  serialize.py
tests/: fixtures.py
tests/e2e/: test_cli_auth_smoke.py
tests/integration/: test_client.py
tests/unit/: test_cli_endpoints.py
