[project]
name = "alphaxiv-py"
version = "0.5.0"
description = "Python SDK and CLI for alphaXiv public research APIs"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Petros" }]
keywords = ["alphaxiv", "arxiv", "research", "cli", "api", "client"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "click>=8.1.7",
    "httpx>=0.27.0",
    "rich>=13.7.1",
]

[project.urls]
Homepage = "https://github.com/petroslamb/alphaxiv-py"
Repository = "https://github.com/petroslamb/alphaxiv-py"
Documentation = "https://github.com/petroslamb/alphaxiv-py#readme"
Issues = "https://github.com/petroslamb/alphaxiv-py/issues"

[project.optional-dependencies]
browser = [
    "playwright>=1.52.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.35.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.11.0",
    "ruff>=0.6.0",
]

[project.scripts]
alphaxiv = "alphaxiv.alphaxiv_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/alphaxiv"]

[tool.hatch.build.targets.wheel.force-include]
"skills/alphaxiv" = "alphaxiv/data/skills/alphaxiv"
"integrations/claude-code" = "alphaxiv/data/integrations/claude-code"
"integrations/opencode" = "alphaxiv/data/integrations/opencode"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--ignore=tests/e2e"
markers = [
    "e2e: live alphaXiv smoke tests for public and authenticated CLI/SDK flows",
]

[tool.coverage.run]
source = ["src/alphaxiv"]
branch = true

[tool.coverage.report]
show_missing = true

[tool.mypy]
python_version = "3.12"
files = ["src/alphaxiv", "tests"]
check_untyped_defs = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
